2009-03-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkStyle.t: Correct a skip count.  Reported by Ryan Niebur.

2009-03-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.220.

2009-03-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkStyle.t
	* xs/GtkStyle.xs: Adapt to the rename of gtk_style_get_property to
	gtk_style_get_style_property.  Make
	Gtk2::Style::get_style_property an alias for Gtk2::Style::get.

2009-03-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellView.t
	* t/GtkEntry.t
	* t/GtkIMContext.t
	* t/GtkImageMenuItem.t
	* t/GtkOrientable.t
	* t/GtkPrintSettings.t
	* t/GtkStatusIcon.t
	* t/GtkStyle.t
	* xs/GtkCellView.xs
	* xs/GtkEntry.xs
	* xs/GtkIMMulticontext.xs
	* xs/GtkImageMenuItem.xs
	* xs/GtkPrintOperation.xs
	* xs/GtkPrintSettings.xs
	* xs/GtkSelection.xs
	* xs/GtkStatusIcon.xs
	* xs/GtkStyle.xs: Change all versions checks to refer to stable
	releases only.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* Makefile
	* NEWS
	* README: Unstable release 1.212.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkHBox.t: Test that widgets packed into a box are completely
	freed upon removal even if they previously appeared as a callback
	argument.  This is a test for a recent memory leak fix in Glib.

	* t/GtkTreeModelIface.t: The leak fix mentioned above causes this
	test to correctly run FINALIZE_INSTANCE now, so adjust the test
	plan.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkTreeModelFilter.t
	* xs/GtkTreeModelFilter.xs: Take ownership of objects returned by
	gtk_tree_model_filter_new to avoid leaking them.  Patch by
	Kevin Ryde.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkStyle.t
	* xs/GtkStyle.xs: Remove the get_property() alias for
	Gtk2::Style::get() so that calling get_property() on a Gtk2::Style
	resolves to Glib::Object::get_property().

2009-03-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>
